[gd_scene load_steps=7 format=3 uid="uid://crpw67q5yagc1"]

[ext_resource type="Script" path="res://DifficultyManager/UserInterface/defeat_layer.gd" id="1_fpbka"]
[ext_resource type="FontFile" uid="uid://dutp781p7514m" path="res://Assets/Asap/static/Asap-BoldItalic.ttf" id="1_vg83d"]
[ext_resource type="Texture2D" uid="uid://db6qwwmrc7jbo" path="res://Assets/star.png" id="2_6niub"]
[ext_resource type="FontFile" uid="uid://5vagwdrxwoct" path="res://Assets/Asap/static/Asap-Bold.ttf" id="3_3loj3"]

[sub_resource type="Theme" id="Theme_vdks4"]
default_font = ExtResource("1_vg83d")

[sub_resource type="LabelSettings" id="LabelSettings_t2ikw"]
font_size = 96

[node name="DefeatLayer" type="CanvasLayer"]
visible = false
script = ExtResource("1_fpbka")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_vdks4")

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Defeat"
label_settings = SubResource("LabelSettings_t2ikw")
horizontal_alignment = 1

[node name="StarContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Star4" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/StarContainer"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_6niub")
expand_mode = 2
stretch_mode = 5

[node name="Star5" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/StarContainer"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_6niub")
expand_mode = 2
stretch_mode = 5

[node name="Star6" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/StarContainer"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_6niub")
expand_mode = 2
stretch_mode = 5

[node name="FailedSurvivalLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.243137, 0.203922, 1)
theme_override_fonts/font = ExtResource("3_3loj3")
text = "Failed to Survived"
horizontal_alignment = 1

[node name="FailedHealthLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.243137, 0.203922, 1)
theme_override_fonts/font = ExtResource("3_3loj3")
text = "Failed to be Untouchable"
horizontal_alignment = 1

[node name="FailedGoldLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.243137, 0.203922, 1)
theme_override_fonts/font = ExtResource("3_3loj3")
text = "Failed to be Rich"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="RetryButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_3loj3")
theme_override_font_sizes/font_size = 32
text = "Retry"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_3loj3")
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed1"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed1"]
